deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: skidpdf-frontend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: skidpdf
        tier: frontend
    spec:
      containers:
      - name: skidpdf-frontend
        image: vacovsky/skidpdf
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
