service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skidpdf
  labels:
    app: skidpdf
    tier: frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
  - port: 8080
    name: http
  selector:
    app: skidpdf
    tier: frontend
