ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skidpdf-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: skidpdf
          servicePort: 8080
      - path: /pdf
        backend:
          serviceName: skidpdf
          servicePort: 8080
